Replace git user info with placeholder information.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Rand Seay
-	email = rand.seay@gmail.com
+	name = John Doe
+	email = john.doe@ihatemyname.com
 [core]
 	editor = subl
 	excludesfile = /Users/rand.seay/.gitignore_global
