--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,12 +1,12 @@
 [user]
 	name = Rand Seay
-	email = rand.seay@gmail.com
+	email = rand.seay@ndus.edu
 [core]
 	editor = subl
-	excludesfile = $HOME/dotfiles/git/.gitignore_global
+	excludesfile = ~/dotfiles/git/.gitignore_global
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path =
+	path = 
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
