--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -16,6 +16,10 @@
     abort = reset --hard HEAD
 	aliases = config --global --get-regexp ^alias.
 	br = branch
+
+	# Change Commits Usage: git change-commits GIT_COMMITTER_NAME "Old Name" "New Name"
+	change-commits = "!f() { VAR=$1; OLD=$2; NEW=$3; shift 3; git filter-branch --env-filter \"if [[ $`echo $VAR` = \\\"$OLD\\\" ]]; then export $VAR=\\\"$NEW\\\"; fi\" $@; }; f"
+	
 	ci = commit
 	co = checkout
 	fancy = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(cyan)<%an>%Creset' --abbrev-commit --date=relative
