Upgrade to python 3.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -43,5 +43,9 @@
 	required = true
 [color]
 	ui = true
-[hub]
-	host = code.ndus.edu
+[pull]
+	rebase = true
+[fetch]
+	prune = true
+[diff]
+	colorMoved = zebra
