Don't wipe local config files.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -36,3 +36,7 @@
 # Quality of life improvements
 [color]
 	ui = true
+
+# Load local machine-specific configuration
+[include]
+	path = ~/.gitconfig.local
